# latex-clean-fig

./: README.md  pyproject.toml
.github/workflows/: test.yml
tests/: test_scenario1.py  test_scenario2.py
